02-helm-deployments/Deployments/KTA 7.9/Scenario 1/namespace-kta.yaml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "kta",
    "labels": {
      "name": "kta"
    }
  }
}
